# rkyv-size-test

./: Cargo.toml
crate-a/: Cargo.toml
crate-a/src/: main.rs
crate-b/: Cargo.toml
crate-b/src/: main.rs
